--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body {
 .container {
     height:100vh;
     width:100%;
+    margin:0;
+    padding:0;
     background-size: cover;
     background:url('../img/tim-stief-YFFGkE3y4F8-unsplash.jpg');
     
@@ -18,10 +20,15 @@ body {
 main {
     height:100vh;
     width:100%;
+    margin:0;
+    padding:0;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.form {
+    width:80%;
 }
 
 #btn-submit {
@@ -32,6 +39,7 @@ main {
     border-radius: 1rem;
     outline: none;
     cursor:pointer;
+    width:100%;
 }
 
 #btn-submit:hover {
@@ -46,43 +54,75 @@ main {
     color:rgb(255, 255, 255);
     border-radius: 1rem;
     outline: none;
+    width:100%;
+    margin-bottom: 1rem;
+
 }
 ::placeholder {
     color:#fff
 }
 
 #content {
-    width:500px;
-    height:500px;
+    width: 380px;
+    height:380px;
     display:grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
     color:#fff;
     margin-top:2rem;
     box-shadow: 10px 10px 15px rgba(0,0,0,0.3);
     box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
 }
-#content * {
+#content div {
     
+    height:100%;
+    width:100%;
     display:flex;
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
+    font-size:1rem;
     
     
 }
 
+
+
 #div-city {
     background:rgb(15, 206, 206,0.7);
-    
+    text-align:center   
+}
+#div-city h2 {
+    font-size:1rem
 }
 #div-sky {
     background:rgb(98, 104, 104,0.7);
     text-align:center
     
 }
+#div-sky h2 {
+    font-size:1rem
+}
 #div-country {
     background:rgb(170, 42, 159,0.7);
+    text-align:center
+
+}
+#div-country h2 {
+    font-size:2rem
 }
 #div-temp {
     background:rgb(30, 187, 101,0.7);
+    text-align:center;
+    padding:0;
+
+}
+#div-temp h2 {
+    font-size:3rem;
+    text-align:center;
+    padding:0;
+    margin-left:auto;
+    margin-right:auto;
+
 }
